tests/ui/traits/fn-pointer/suggest-wrap-parens-method.stderr
error[E0277]: the trait bound `fn() {main}: Foo` is not satisfied
  --> $DIR/suggest-wrap-parens-method.rs:13:10
   |
LL |     main.do_stuff();
   |          ^^^^^^^^ the trait `Foo` is not implemented for fn item `fn() {main}`
   |
note: required by a bound in `Bar::do_stuff`
  --> $DIR/suggest-wrap-parens-method.rs:8:36
   |
LL |     fn do_stuff(&self) where Self: Foo {}
   |                                    ^^^ required by this bound in `Bar::do_stuff`
help: the trait `Foo` is implemented for fn pointer `fn()`, try casting using `as`
   |
LL |     (main as fn()).do_stuff();
   |     +     ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
